--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Todo App</title>
+  <link rel="stylesheet" href="/src/index.css">
+</head>
+<body class="bg">
+  <div class="container">
+    <h3 class="heading">ToDo App</h3>
+    <form id="todo-form" class="form">
+      <input id="new-todo" class="input" type="text" placeholder="Add a Task">
+      <button id="add-todo" class="button">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+        </svg>
+      </button>
+    </form>
+    <ul id="todo-list"></ul>
+    <p id="todo-count" class="count"></p>
+  </div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
 </html>
