adding a task counter

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         </svg>
       </button>
     </form>
-    <ul id="todo-list"></ul>
+    <div class="task-container">
+      <ul id="todo-list"></ul>
+    </div>
     <p id="todo-count" class="count"></p>
   </div>
   <script type="module" src="/src/main.ts"></script>
