fixing the absolute path of the libraries

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
-  <link rel="stylesheet" href="/src/index.css">
+  <link rel="stylesheet" href="src/index.css">
 </head>
 <body class="bg">
   <div class="container">
@@ -22,6 +22,6 @@
     </div>
     <p id="todo-count" class="count"></p>
   </div>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="src/main.ts"></script>
 </body>
 </html>
