--- a/index.html
+++ b/index.html
@@ -4,7 +4,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
-  <link rel="stylesheet" href="src/index.css">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    .bg {
+      @apply h-screen w-screen p-4 bg-gradient-to-r from-[#2F80ED] to-[#1CB5E0];
+    }
+    .container {
+      @apply bg-slate-100 max-w-[500px] w-full m-auto rounded-md shadow-xl p-4;
+    }
+    .heading {
+      @apply text-3xl font-bold text-center text-gray-800 p-2;
+    }
+    .form {
+      @apply flex justify-between space-x-2;
+    }
+    .input {
+      @apply border p-2 w-full text-2xl;
+    }
+    .button {
+      @apply border p-4 ml-2 bg-purple-500 text-slate-100;
+    }
+    .task-container {
+      @apply mt-4;
+    }
+    .task-container ul {
+      @apply list-none p-0 text-2xl;
+    }
+    .task-container li {
+      @apply flex justify-between items-center p-2 border-b border-gray-300 cursor-pointer;
+    }
+    .task-container li button {
+      @apply bg-red-500 text-white p-1 rounded;
+    }
+    .count {
+      @apply text-center p-2 mt-4;
+    }
+    .completed {
+      @apply line-through;
+    }
+  </style>  
 </head>
 <body class="bg">
   <div class="container">
